# maki

./: .gitignore  README.md  maki.example.yaml  pyproject.toml
docs/: basic-design.md  conceptual-design.md  requirements.md  status.md
docs/guide/: maki-yaml.md
examples/local-python-action/echo/: action.py  maki-action.yaml
scripts/: pre-commit.sh
src/maki/: __init__.py  agent.py  config.py  confirm.py  context.py  core.py  event.py  user_input.py  watcher.py  web.py
src/maki/templates/: dashboard.html
tests/: test_agent.py  test_config.py  test_core.py
